plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.fund'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot 기본 의존성
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok 의존성
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.4'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	// webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// queryDSL 의존성
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// Batch 의존성
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	// webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// python 스크립트 처리
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

// QueryDSL 빌드 옵션
clean{
	delete file("src/main/generated")
}
